tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_statement_trailing_pure.objc3
module MisplacedQualifierStatementTrailingPure;

fn main() -> i32 {
  let lhs = 1;
  pure let rhs = 2;
  return lhs;
}